css/main.css
/* ... */
.pl-30 {
	padding-left: 30px;
}

.p-40 {
	padding: 40px;
}

.float-left {
	float: left;
}

.float-right {
	float: right;
}

.text-italic {
	font-style: italic;
}

.text-white {
	color: #fff;
}

.transition {
	-webkit-transition: all 0.3s ease 0s;
	-moz-transition: all 0.3s ease 0s;
	-o-transition: all 0.3s ease 0s;
	transition: all 0.3s ease 0s;
}

.section-full {
	padding: 150px 0;
}

.section-half {
	padding: 75px 0;
}
.service-section {
	padding: 25px 0;
}
.section-title-divider {
	width: 80px;
	height: 3px;
	background: #00b8de;
	margin: 0 auto;
	margin-top: 20px;
	margin-bottom: 20px;
}

.flex {
	display: -webkit-box;
	display: -webkit-flex;
	display: -moz-flex;
	display: -ms-flexbox;
	display: flex;
}

.inline-flex {
	display: -webkit-inline-box;
	display: -webkit-inline-flex;
	display: -moz-inline-flex;
	display: -ms-inline-flexbox;
	display: inline-flex;
}

.flex-grow {
	-webkit-box-flex: 1;
	-webkit-flex-grow: 1;
	-moz-flex-grow: 1;
	-ms-flex-positive: 1;
	flex-grow: 1;
}

.flex-wrap {
	-webkit-flex-wrap: wrap;
	-moz-flex-wrap: wrap;
	-ms-flex-wrap: wrap;
	flex-wrap: wrap;
}

.flex-left {
	-webkit-box-pack: start;
	-ms-flex-pack: start;
	-webkit-justify-content: flex-start;
	-moz-justify-content: flex-start;
	justify-content: flex-start;
}

.flex-middle {
	-webkit-box-align: center;
	-ms-flex-align: center;
	-webkit-align-items: center;
	-moz-align-items: center;
	align-items: center;
}

.flex-right {
	-webkit-box-pack: end;
	-ms-flex-pack: end;
	-webkit-justify-content: flex-end;
	-moz-justify-content: flex-end;
	justify-content: flex-end;
}

.flex-top {
	-webkit-align-self: flex-start;
	-moz-align-self: flex-start;
	-ms-flex-item-align: start;
	align-self: flex-start;
}

.flex-center {
	-webkit-box-pack: center;
	-ms-flex-pack: center;
	-webkit-justify-content: center;
	-moz-justify-content: center;
	justify-content: center;
}

.flex-bottom {
	-webkit-align-self: flex-end;
	-moz-align-self: flex-end;
	-ms-flex-item-align: end;
	align-self: flex-end;
}

.space-between {
	-webkit-box-pack: justify;
	-ms-flex-pack: justify;
	-webkit-justify-content: space-between;
	-moz-justify-content: space-between;
	justify-content: space-between;
}

.space-around {
	-ms-flex-pack: distribute;
	-webkit-justify-content: space-around;
	-moz-justify-content: space-around;
	justify-content: space-around;
}

.flex-column {
	-webkit-box-direction: normal;
	-webkit-box-orient: vertical;
	-webkit-flex-direction: column;
	-moz-flex-direction: column;
	-ms-flex-direction: column;
	flex-direction: column;
}

.flex-cell {
	display: -webkit-box;
	display: -webkit-flex;
	display: -moz-flex;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-flex: 1;
	-webkit-flex-grow: 1;
	-moz-flex-grow: 1;
	-ms-flex-positive: 1;
	flex-grow: 1;
}

.display-table {
	display: table;
}

.light {
	color: #fff;
}

.dark {
	color: #000;
}

.relative {
	position: relative;
}

.overflow-hidden {
	overflow: hidden;
}

.overlay {
	position: absolute;
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
}

.container.fullwidth {
	width: 100%;
}

.container.no-padding {
	padding-left: 0;
	padding-right: 0;
}

.no-padding {
	padding: 0;
}

.section-bg {
	background: #f9fafc;
}

@media (max-width: 767px) {
	.no-flex-xs {
		display: block !important;
	}
}

.row.no-margin {
	margin-left: 0;
	margin-right: 0;
}

.primary-btn {
	line-height: 40px;
	padding: 0 40px;
	border-radius: 10px;
	background: transparent;
	border: 1px solid #00b8de;
	color: #222222;
	display: inline-block;
	font-weight: 600;
	-webkit-transition: all 0.3s ease 0s;
	-moz-transition: all 0.3s ease 0s;
	-o-transition: all 0.3s ease 0s;
	transition: all 0.3s ease 0s;
	cursor: pointer;
}

.primary-btn:focus {
	outline: none;
}

.primary-btn.banner-btn {
	color: #fff;
	margin-top: 60px;
}

.primary-btn span {
	margin-left: 15px;
}

.primary-btn:hover {
	background: #00b8de;
	color: #fff;
	box-shadow: 0px 10px 20px 0px rgba(60, 64, 143, 0.2);
}

.section-title {
	padding-bottom: 70px;
}
.schedule-call-btn {
	background: black;
	border: 1px solid #080808;
	color: black;
}
.schedule-call-btn:hover {
	background: #00b8de;
	color: #fff;
	box-shadow: 0px 10px 20px 0px rgba(5, 91, 118, 0.2);
}
.rental-btn-div {
	margin-top: 2vh;
	display: flex;
	align-items: center;
	justify-content: center;
}
.rental-section-btn {
	background: #00b8de;
	margin-top: 2vh;
	display: flex;
	align-items: center;
	justify-content: center;
}
.section-title h3 {
	font-weight: 300;
	font-size: 24px;
	color: #777777;
}

.section-title h3 b {
	font-weight: 300;
	color: #222222;
}

.progressBar,
.progressBar-contentCircle {
	display: table;
	height: 150px;
	position: absolute;
	width: 150px;
}

.progressBar-circle,
.progressBar-background {
	fill: none;
	stroke: #777777;
	stroke-width: 5;
	stroke-linecap: round;
	stroke-dasharray: 0;
	stroke-dashoffset: 0;
	position: relative;
	z-index: 10;
	-webkit-transition: all 0.3s ease 0s;
	-moz-transition: all 0.3s ease 0s;
	-o-transition: all 0.3s ease 0s;
	transition: all 0.3s ease 0s;
}

.progressBar-background {
	stroke: #f9f9ff;
	stroke-width: 4;
	z-index: 0;
}

.progressBar-percentage {
	color: #222222;
	font-size: 24px;
	text-align: center;
	width: 100%;
	display: table-cell;
	vertical-align: middle;
	-webkit-transition: all 0.3s ease 0s;
	-moz-transition: all 0.3s ease 0s;
	-o-transition: all 0.3s ease 0s;
	transition: all 0.3s ease 0s;
}

/************************/
/* structure de la page */
/************************/
.list {
	list-style: none;
	margin: 10px auto;
	padding: 0px;
}

.list:hover .progressBar-circle {
	stroke: #00b8de;
}

.list:hover .progressBar-percentage {
	color: #00b8de;
}

.list-item {
	height: 150px;
	width: 150px;
	margin-bottom: 20px;
}

.details-btn {
	border: 1px solid #00b8de;
	width: 40px;
	height: 40px;
	border-radius: 20px;
	display: -webkit-box;
	display: -webkit-flex;
	display: -moz-flex;
	display: -ms-flexbox;
	display: flex;
	overflow: hidden;
}
/* ... */

